Add test cases for map object id
#468